Adjust FIXMEs in main.tex
- Some locations in main.tex have FIXME annotations with comments highlighting problems

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -203,7 +203,7 @@ Unserer Einschätzung nach ist TranscriptionDesk aufgrund der Aufgabenstellung d
 Betrachten wir unseren Standpunkt durch Haklays Augen, so würden wir unser Projekt auf Level 2, der ,,Distributed Intelligence'' einordnen,
 da Freiwillige ganz zur Interpretation der Texte eingesetzt werden sollen und somit ihre Denkleistung in Anspruch genommen wird.
 Außerdem ist die Problemdefinition bereits vorgegeben, so dass wir das Projekt auch nicht auf Level 3 einordnen könnten.
-Man sollte dennoch Notiz davon nehmen, dass wir damit dem Crowdsourcing nach Haklay sehr nahe kommen.%Specify damit FIXME
+Man sollte dennoch Notiz davon nehmen, dass wir damit dem Crowdsourcing nach Haklay sehr nahe kommen.%damit genauer ausführen FIXME
 
 Schauen wir uns die Kategorien von Crowston und Wiggins an, so müssen wir TranscriptionDesk zwangsläufig zur Kategorie ,,Virtual'' zählen.
 Alle Faktoren des Projektes treffen genau zu.
@@ -243,7 +243,7 @@ Dadurch soll die Digitalisierung der auf den Scans enthaltenen Texte nicht nur b
 Das Ziel, das wir vor Augen haben ist also der Aufbau einer Weboberfläche, welche die Scans an eine offene Gruppe freiwilliger Nutzer bereitstellt,
 ihnen die Werkzeuge für deren Bearbeitung bereitstellt, die Ergebnisse speichert, und der Nutzerschaft die Möglichkeit bietet,
 ihre gegenseitigen Ergebnisse zu bewerten, um ein einheitliches Level an Validierung der digialisierten Texte anzustreben.
-Die Seite soll so strukturiert sein, dass sie weitestgehend selbstverwaltend ist und lediglich einige wenige Administratoren%Umgangssprache? FIXME
+Die Seite soll so strukturiert sein, dass sie weitestgehend selbstverwaltend ist und lediglich einige wenige Administratoren
 die wenigen verbleibenden Verwaltungsaufgaben erledigen können.
 Dabei ist auch die Möglichkeit gegeben, diese Administratoren ebenfalls in Teilen aus der Nutzerbasis zu beziehen.
 
@@ -265,8 +265,9 @@ oder etwa um Statistiken einzelner oder auch aller Nutzer zu erstellen.
 Außerdem besteht eine unserer wichtigsten Aufgaben darin, auf der gesamten Weboberfläche Unicode verwendbar und lesbar zu machen.
 Ganz speziell bedeutet das, das wir eine sehr umfangreiche Eingabemaske aufbauen müssen,
 die einen mächtigen Satz an mittelalterlichen Sonderzeichen in einer nutzerfreundlichen Art und Weise hergibt.
-Die Identifikation von Scans erfolgt über Cite URNs.%Cite Cite Cite! FIXME
-Wir wollen die Areas of Interest durch Erweiterung des Konzeptes ebenfalls über jene Cite URN identifizieren können.%<Irgendwas wichtiges vergessen? Hier ist die richtige Stelle>
+Die Identifikation von Scans erfolgt über Cite URNs.% Quelle für Cite URNs zitieren! FIXME
+Wir wollen die Areas of Interest durch Erweiterung des Konzeptes ebenfalls über jene Cite URN identifizieren können.
+%<Irgendwas wichtiges vergessen? Hier ist die richtige Stelle>
 
 Die bisher genannten Features haben die höchste Priorität und bilden die Grundfunktionalität unserer Weboberfläche.
 Ab diesem Punkt lassen sich schrittweise weitere Features hinzufügen um die Arbeit zu erleichtern, angenehmer oder einfach ansprechender zu gestalten.
@@ -305,14 +306,14 @@ Diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
 Bedenkt man die Fülle an Datenmaterial, welches wir zur Verfügung stellen, so ist es kaum vorstellbar,
 dass ein einziger Nutzer mit vertrebarem Zeitaufwand alle Dokumente transkribieren kann.
 Diese Arbeitsleistung wird erst dadurch möglich, dass eine größere Gemeinschaft sich der Aufgabe annimmt.
-Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer sehen und von ihnen lernen könnte. %Müsste? FIXME
+Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer sehen und von ihnen lernen könnte.
 Jeder, der am Projekt teilnimmt, tut dies mit großer Sicherheit aus dem Grund,
 dass er ein gewisses Interesse und Wissen in dem Gebiet hat, und dieses teilen oder vergrößern möchte.
 Unsere Plattform bietet diesen zwei Interessentengruppen genau das.
 Selbst wenn also ein Nutzer kaum nutzbares Wissen hat, so kann unsere Plattform doch auch für ihn profitabel sein.
 Er könnte dadurch mehr lernen, und unter Umständen dieses neu erworbene Wissen im gleichen Atemzug anwenden.
 Unsere Nutzergemeinschaft lebt also letzten Endes davon, dass jeder seine eigenen Wissensfetzen mitbringt
-und jeder von den anderen lernen kann und somit etwas gutes für sich und für die Wissenschaftliche Erkenntnis tut.%etwas GUTES + subjektiv? Erkenntnis…gewinn FIXME
+und jeder von den anderen lernen kann und somit etwas Gutes für sich und für den wissenschaftlichen Erkenntnisgewinn tut.%etwas Gutes zu subjektiv. FIXME
 Wenn wir diese Erkenntnis vermitteln können, dann ist auch damit ein großer Anreiz geschaffen.
 Außerdem schaffen wir die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft austauschen zu können.
 
