Work on Chapter 5, projektbericht
- Added Flanagan to references.bib

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -413,9 +413,30 @@ das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnot
     \url{https://en.wikipedia.org/wiki/MySQL}} und PHP\footnote{
     \url{https://secure.php.net/}
     \url{https://en.wikipedia.org/wiki/PHP}} nutzen.
-%LAMP Stack
-%JavaScript + Libs
-%Quellen zu den Technologien nennen
+
+Basierend auf dieser serverseitigen Installation liefern wir eine Website an die Browser der Nutzer aus,
+die JavaScript\footnote{
+    \cite{Flanagan},
+    \url{https://en.wikipedia.org/wiki/JavaScript}} enthält, dass es uns ermöglicht,
+erweiterte Funktionalitäten im Browser bereit zu stellen,
+und so komplexere Aufgaben wie das Markieren von Areas of Interest
+in einer Angenehmen Oberflächte zu präsentieren.
+Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
+
+\begin{description}
+\item[jQuery:]
+    DESCRIBE ME!
+\item[ace:]
+    DESCRIBE ME!
+\item[openLayers:]
+    DESCRIBE ME!
+\item[jquery-ui:]
+    DESCRIBE ME!
+\item[bootstrap:]
+    DESCRIBE ME!
+\item[bootbox:]
+    DESCRIBE ME!
+\end{description}
 
 \subsection{Gesamtübersicht}
 Moduldiagram + Erklärungen
