--- a/projektbericht/references.bib
+++ b/projektbericht/references.bib
@@ -30,3 +30,11 @@ year = {2011},
 howpublished = {\url{http://andreawiggins.com/wp-content/uploads/2013/10/Wiggins2011HICSS.pdf}},
 note = {Letzter Zugriff am 5.10.2015}
 }
+
+@book{Flanagan,
+    author = {David Flanagan},
+    title = {JavaScript: The Definitive Guide, 6th Edition},
+    publisher = {O'Reilly Media},
+    howpublished = {\url{http://shop.oreilly.com/product/9780596805531.do}},
+    year = {2011}
+}
