--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -571,10 +571,10 @@ Stimmt ein als Administrator markierter Nutzer ab,
 so wird dessen Stimme sofort als Entscheidung gewertet.
 
 \section{Projektverlauf}
-Bisherige Planungsabschnitte,
-Entsprechendes Vorgehen unseres Teams,
-Entdecken von Issues + Änderungen von Technologieauswahl
-Diskussion über URNs
+In diesem Abschnitt möchten wir den Ablauf unseres Projektes von den ersten Treffen bis hin zum finalen Stand berichten. Dass nicht immer alles planmäßig verläuft liegt in der Natur der Sache. Deswegen möchten wir die unterwegs aufgetretenen Probleme genauer betrachten, und unsere Entscheidungen und Abwägungen nachvollziehbar darlegen. \\
+Ausgehend von unseren bereits erwähnten Zielen waren wir zu Beginn in der Lage, notwendige Technologien abzuschätzen. Dabei legten wir viel Wert auf die Auslagerung von Funktionen auf Dienste, welche die benötigte Funktionalität bereits implementiert haben und zur Verfügung stellen und stellten fest, welche Frameworks und Sprachen wir benötigen würden. Danach legten wir die groben Entwicklungsetappen fest, welche bereits in Form unserer drei Meilensteine unter Punkt 3.1. Erwähnung fanden. Die Meilensteine hatten allerdings nicht von Anfang an diese Form. Nur den ersten Meilenstein konnten wir zu diesem Zeitpunkt bereits klar abgrenzen. Uns war klar, dass auch mindestens ein zweiter Meilenstein von Nöten wäre. Dieser hatte zu diesem Zeitpunkt allerdings kaum konkrete Ziele, und die Entstehung eines dritten Meilensteines war zu diesem Zeitpunkt weder angedacht noch ausgeschlossen worden. Zwischenzeitlich wurde sogar ein vierter Meilenstein geplant, doch unser erster Meilenstein erfüllte letzten Endes mehr Anforderungen als geplant, so dass sich die Planung nach hinten wieder anders gestaltete.
+Wir wussten zu Beginn, dass die Scans auf einem Fileserver liegen, was aus rechtlichen Gründen aber nicht so bleiben sollte. An diesem Punkt gab es noch keine konkrete Antwort auf die Frage, von wo wir die Bilder beziehen, und wie wir entsprechend darauf zugreifen könnten. Außerdem waren wir uns schon einig, dass wir, in Anlehnung an das Homer-Multitext-Projekt, ebenfalls Areas of Interest verwenden möchten, welche im dortigen Projekt als ,,Regions of Interest'' bezeichnet werden. Wir waren uns auch einig, dass Rechtecke die optimale Form wären, um diese Regionen zu markieren, wussten nur noch nicht mit Sicherheit, inwelcher Form wir diese Umsetzen und abspeichern sollten. Unser Favorit war die Variante, dass Rechtecke nur parallel zu den Seiten verlaufen könnten und man lediglich zwei Punkte, oder einen Punkt sowie Höhe und Breite abspeichern müsste. Nach kurzer Bedenkzeit entschieden wir uns für die zuletzt genannte Variante. Außerdem waren wir schon zu Beginn darüber im Bilde, dass Nutzer sich in irgendeiner Form Registrieren können sollten, und dass dies eine Voraussetzung wäre, um auf die Daten zugreifen zu können. Deswegen war die Login-Routine eine der ersten beschlossenen Funktionen. Außerdem war ebenfalls klar, dass Arbeit nur im eingeloggten Zustand verrichtet werden darf. \\
+Eine Woche später kam Omeka als Server für unsere Bilddateien ins Gespräch. Dort sollten wir einen Contributor-Nutzerzugang bekommen um über diesen Zugang zu den Scans zu erhalten. Schnell stellte sich auch die Frage, ob wir ein Omeka-Plugin bauen müssten, oder ob es hierfür bereits implementierte Instrumente gäbe, deren Verwendung für uns in Frage kommt. Noch am selben Tag entschlossen wir uns dazu, für die Anmeldung einen Authentification Provider zu verwenden.
 
 \subsection{Aktueller Stand des Projektes}
 
