Kommentare im Projektbericht hinzugefügt

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -576,6 +576,9 @@ Ausgehend von unseren bereits erwähnten Zielen waren wir zu Beginn in der Lage,
 Wir wussten zu Beginn, dass die Scans auf einem Fileserver liegen, was aus rechtlichen Gründen aber nicht so bleiben sollte. An diesem Punkt gab es noch keine konkrete Antwort auf die Frage, von wo wir die Bilder beziehen, und wie wir entsprechend darauf zugreifen könnten. Außerdem waren wir uns schon einig, dass wir, in Anlehnung an das Homer-Multitext-Projekt, ebenfalls Areas of Interest verwenden möchten, welche im dortigen Projekt als ,,Regions of Interest'' bezeichnet werden. Wir waren uns auch einig, dass Rechtecke die optimale Form wären, um diese Regionen zu markieren, wussten nur noch nicht mit Sicherheit, inwelcher Form wir diese Umsetzen und abspeichern sollten. Unser Favorit war die Variante, dass Rechtecke nur parallel zu den Seiten verlaufen könnten und man lediglich zwei Punkte, oder einen Punkt sowie Höhe und Breite abspeichern müsste. Nach kurzer Bedenkzeit entschieden wir uns für die zuletzt genannte Variante. Außerdem waren wir schon zu Beginn darüber im Bilde, dass Nutzer sich in irgendeiner Form Registrieren können sollten, und dass dies eine Voraussetzung wäre, um auf die Daten zugreifen zu können. Deswegen war die Login-Routine eine der ersten beschlossenen Funktionen. Außerdem war ebenfalls klar, dass Arbeit nur im eingeloggten Zustand verrichtet werden darf. \\
 Eine Woche später kam Omeka als Server für unsere Bilddateien ins Gespräch. Dort sollten wir einen Contributor-Nutzerzugang bekommen um über diesen Zugang zu den Scans zu erhalten. Schnell stellte sich auch die Frage, ob wir ein Omeka-Plugin bauen müssten, oder ob es hierfür bereits implementierte Instrumente gäbe, deren Verwendung für uns in Frage kommt. Noch am selben Tag entschlossen wir uns dazu, für die Anmeldung einen Authentification Provider zu verwenden.
 
+%Virtual Machine/Containerlösung: Zuerst Docker, dann Vagrant, weil schwierig unter Windows einzurichten. BootToDocker sollte auf Windows laufen, war allerdings kaputt und lief unter Windows nicht. Weitere Probleme wurden erwartet. Deswegen Wechsel zu Vagrant.
+%MUFI-Keyboard: Franz hat zuerst eine Eingabemaske dafür entwickelt. Allerdings ist es schwierig zu organisieren, da MUFI unglaublich viele Symbole hat. Eine günstigere Organisierung war notwendig. Wechsel der Technik war schwierig zu planen. MUFI-Symbole waren vorher in MUFI-vorgegebenen Kategorien organisiert, diese machten keinen Sinn für die Eingabemaske. Eigene Kategorisierung der Symbole wurde notwendig. Die substrings der Description eines Zeichens wurden als Tags verwendet. Diese wurden mittels Bucket-Sort organisiert und bessere Kategorien entstanden.
+
 \subsection{Aktueller Stand des Projektes}
 
 \section{Zusammenfassung und Ausblick}
