--- a/projektbericht/references.bib
+++ b/projektbericht/references.bib
@@ -23,7 +23,7 @@ year = {2013},
 note = {Letzter Zugriff über \url{https://github.com/ThomasK81/CitizenScienceCourse/blob/master/Seminar20150422/haklaycrowdsourcinggeographicknowledge.pdf} am 5.10.2015}
 }
 
-@mist{CW,
+@misc{CW,
 author = {Kevin Crowston \& Andrea Wiggins},
 title = {From Conservation to Crowdsourcing: A Typology of Citizen Science. Proceedings of the 44th Annual Hawaii International Conference on System Sciences},
 year = {2011},
